--- a/project-web-client/package.json
+++ b/project-web-client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.1",
     "aws-amplify": "^5.3.11",
+    "cookies-next": "^4.0.0",
     "next": "14.0.1",
+    "next-client-cookies": "^1.0.6",
     "react": "^18",
     "react-dom": "^18"
   },
