--- a/project-web-client/package.json
+++ b/project-web-client/package.json
@@ -12,6 +12,8 @@
     "@aws-amplify/ui-react": "^5.3.1",
     "aws-amplify": "^5.3.11",
     "cookies-next": "^4.0.0",
+    "dotenv": "^16.3.1",
+    "https": "^1.0.0",
     "next": "14.0.1",
     "next-client-cookies": "^1.0.6",
     "react": "^18",
